charts/camunda-platform-8.10/test/integration/scenarios/common/resources/gateway-gke-healthchecks.yaml
apiVersion: networking.gke.io/v1
kind: HealthCheckPolicy
metadata:
  name: $RELEASE_NAME-identity
  namespace: $NAMESPACE
spec:
  default:
    checkIntervalSec: 15
    timeoutSec: 10
    healthyThreshold: 1
    unhealthyThreshold: 3
    logConfig:
      enabled: false
    config:
      type: HTTP
      httpHealthCheck:
        port: 8082
        requestPath: /actuator/health/readiness
  targetRef:
    group: ""
    kind: Service
    name: $RELEASE_NAME-identity
---
apiVersion: networking.gke.io/v1
kind: HealthCheckPolicy
metadata:
  name: $RELEASE_NAME-zeebe-gateway
  namespace: $NAMESPACE
spec:
  default:
    checkIntervalSec: 15
    timeoutSec: 10
    healthyThreshold: 1
    unhealthyThreshold: 3
    logConfig:
      enabled: false
    config:
      type: HTTP
      httpHealthCheck:
        port: 9600
        requestPath: /orchestration/actuator/health/readiness
  targetRef:
    group: ""
    kind: Service
    name: $RELEASE_NAME-zeebe-gateway
---
apiVersion: networking.gke.io/v1
kind: HealthCheckPolicy
metadata:
  name: keycloak
  namespace: $NAMESPACE
spec:
  default:
    checkIntervalSec: 15
    timeoutSec: 10
    healthyThreshold: 1
    unhealthyThreshold: 3
    logConfig:
      enabled: false
    config:
      type: HTTP
      httpHealthCheck:
        port: 8080
        requestPath: /auth/realms/camunda-platform
  targetRef:
    group: ""
    kind: Service
    name: keycloak
---
apiVersion: networking.gke.io/v1
kind: HealthCheckPolicy
metadata:
  name: $RELEASE_NAME-optimize
  namespace: $NAMESPACE
spec:
  default:
    checkIntervalSec: 15
    timeoutSec: 10
    healthyThreshold: 1
    unhealthyThreshold: 3
    logConfig:
      enabled: false
    config:
      type: HTTP
      httpHealthCheck:
        port: 8092
        requestPath: /actuator/health/readiness
  targetRef:
    group: ""
    kind: Service
    name: $RELEASE_NAME-optimize
---
apiVersion: networking.gke.io/v1
kind: HealthCheckPolicy
metadata:
  name: $RELEASE_NAME-connectors
  namespace: $NAMESPACE
spec:
  default:
    checkIntervalSec: 15
    timeoutSec: 10
    healthyThreshold: 1
    unhealthyThreshold: 3
    logConfig:
      enabled: false
    config:
      type: HTTP
      httpHealthCheck:
        port: 8080
        requestPath: /connectors/actuator/health/readiness
  targetRef:
    group: ""
    kind: Service
    name: $RELEASE_NAME-connectors
---
apiVersion: networking.gke.io/v1
kind: HealthCheckPolicy
metadata:
  name: $RELEASE_NAME-web-modeler-restapi
  namespace: $NAMESPACE
spec:
  default:
    checkIntervalSec: 15
    timeoutSec: 10
    healthyThreshold: 1
    unhealthyThreshold: 3
    logConfig:
      enabled: false
    config:
      type: HTTP
      httpHealthCheck:
        port: 8091
        requestPath: /modeler/health/readiness
  targetRef:
    group: ""
    kind: Service
    name: $RELEASE_NAME-web-modeler-restapi
---
apiVersion: networking.gke.io/v1
kind: HealthCheckPolicy
metadata:
  name: $RELEASE_NAME-web-modeler-websockets
  namespace: $NAMESPACE
spec:
  default:
    checkIntervalSec: 15
    timeoutSec: 10
    healthyThreshold: 1
    unhealthyThreshold: 3
    logConfig:
      enabled: false
    config:
      type: HTTP
      httpHealthCheck:
        port: 8060
        requestPath: /up
  targetRef:
    group: ""
    kind: Service
    name: $RELEASE_NAME-web-modeler-websockets
