charts/camunda-platform-8.10/test/integration/scenarios/common/resources/gateway-prereq.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: pre-existing-gateway
  namespace: $NAMESPACE
spec:
  gatewayClassName: nginx
  listeners:
  - name: https
    port: 443
    protocol: HTTPS
    hostname: "*"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: camunda-platform
    allowedRoutes:
      namespaces:
        from: Same
